--- a/src/BTL/assets/css/main.css
+++ b/src/BTL/assets/css/main.css
@@ -120,3 +120,111 @@
 .header__navbar-dropdown-list li a:hover {
     background-color: #C2C2C2;
 }
+
+/* Authen modal */
+/* Thanh cuộn */
+.scrollable-container {
+    max-height: 600px;
+    overflow-y: auto;
+    padding: 0px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+
+.auth-form {
+    width: 545px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: var(--white-color);
+    overflow: hidden;
+    padding: 30px;
+}
+
+.auth-form__header,
+.auth-form__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.auth-form__header {
+    margin-top: 50px;
+    width: 100%;
+}
+
+.auth-form__logo-img {
+    border-radius: 8px;
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    text-align: center;
+}
+
+.auth-form__heading {
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.4;
+    margin: 12px 0;
+    width: 100%;
+    text-align: center;
+}
+
+.auth-form__description {
+    color: #f33a58;
+    width: min(400px, 90%);
+    margin: 0 auto;
+    font-size: 1rem;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.modal__label {
+    display: block;
+    font-size: 1rem;
+    margin-top: 12px;
+}
+
+.auth-form__input {
+    width: 100%;
+    height: 40px;
+    margin-top: 4px;
+    padding: 0 12px;
+    font-size: 1rem;
+    border-radius: 2px;
+    border: 1px solid var(--border-color);
+    outline: none;
+}
+
+.auth-form__control {
+    margin-top: 32px;
+}
+
+.auth-form__Btn {
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 2px;
+    font-size: 1rem;
+    padding: 0 12px;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+.auth-form__Btn:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.auth-form__aside {
+    margin-top: 18px;
+    font-size: 0.8rem;
+    text-align: center;
+    padding: 0 12px;
+}
+
+.auth-form__text-link {
+    text-decoration: none;
+    color: #f33a58;
+}
+
