--- a/src/BTL/assets/css/main.css
+++ b/src/BTL/assets/css/main.css
@@ -1,9 +1,10 @@
-
+/* header */
 .header {
     height: var(--header-height); 
     background-color: var(--white-color);
 }
 
+/* header-background */
 .header__background {
     background-image: linear-gradient(to bottom,#fff 0%,#f4f4f4 100%);
     background-repeat: repeat-x;
@@ -16,6 +17,7 @@
     cursor: pointer;
 }
 
+/* header__navbar */
 .header__navbar-inner {
     background-color: #27323a;
 }
@@ -282,6 +284,7 @@
     color: #f33a58;
 }
 
+/* slider */
 .slider {
     background-color: var(--white-color);
 }
@@ -292,6 +295,8 @@
     width: 100%;
 }
 
+/* Content */
+/* Content-section */
 .content__section {
     padding-top: 40px;
     padding-bottom: 10px;
@@ -370,6 +375,7 @@
     object-fit: cover;
 }
 
+/* content__description */
 .content__description {
     padding-top: 40px;
     padding-bottom: 10px;
@@ -425,3 +431,238 @@
     color: #cf1628;
 
 }
+
+/* content__tips */
+.content__tips-inner {
+    position: relative;
+    padding: 40px 15px;
+}
+
+.content__tips-video {
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.content__tips-video-container {
+    padding-left: 15px;
+    padding-right: 15px;
+    float: left;
+    margin-bottom: 30px;
+}
+
+.content__tips-video-container video {
+    object-fit: contain;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    width: 100%;
+    height: auto;
+}
+
+.content__tips-nav {
+    min-height: 200px;
+}
+
+.content__tips-nav-list {
+    list-style: none;
+    border-bottom: 1px solid #dee2e6;
+    border-bottom-color: var(--primary-color);
+    border-bottom-width: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.content__tips-nav-item {
+    margin-bottom: 0;
+}
+
+.content__tips-nav-link {
+    display: block;;
+    text-decoration: none;
+    background-color: #f0f0f0;
+    border-color: #f0f0f0;
+    color: #cf1628;
+    margin-right: 0.3rem;
+    padding: 0.35rem 0.7rem;
+    border: 1px solid transparent;
+    border-radius: 0.15rem 0.15rem 0 0;
+}
+
+.content__tips-nav-link.active {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.content__tips-tab {
+    padding-top: 0.2rem;
+}
+
+.content__tips-tab-pane {
+    display: none;
+}
+
+.content__tips-tab-pane.active{
+    display: block;
+}
+
+.content__tips-tab-pane h4 {
+    text-align: justify;
+    margin-top: 0px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--text-color);
+    line-height: 1.6;
+    padding-left: 0;
+}
+
+/* content__courses */
+.content__courses {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: rgb(241, 242, 243);
+}
+
+.content__courses-inner {
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+}
+
+.content__courses-title {
+    position: relative;
+    margin: 0 0 30px;
+    padding-bottom: 10px;
+}
+
+.content__courses-title-text {
+    margin: 0;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: #cf1628;
+    line-height: 1.2;
+}
+
+.content__courses-title-text::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 60px;
+    height: 1px;
+    border-bottom: solid 3px var(--primary-color);
+}
+
+.content__course-slider {
+    display: flex;
+}
+
+.content__course-slider-inner {
+    width: 280px;
+    margin-right: 30px;
+}
+
+.content__course-slider-item {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.content__course-slider-item a {
+    text-decoration: none;
+    color: var(--primary-color);
+    background-color: transparent;
+}
+
+.content__course-slider-img {
+    margin: 0;
+}
+
+.content__course-slider-img img{
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    min-width: 12px;
+    height: auto;
+}
+
+.content__course-slider-text1 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(230, 57, 70, 0.6);
+}
+
+.content__course-slider-text2 {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+.content__course-slider-text3 {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.content__course-slider-text4 {
+    position: relative;
+    z-index: 1;
+    padding: 0 10px;
+}
+
+.content__course-slider-title {
+    color: var(--white-color);
+    margin-bottom: 25px;
+    position: relative;
+    margin: 0 0 7px;
+    font-size: 1.2rem;
+}
+
+.content__course-slider-title::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    margin-left: -30px;
+    width: 60px;
+    height: 1px;
+    border-bottom: solid 1px var(--white-color);
+    transition: all .25s ease-in-out;
+}
+
+/*footer section*/
+.footer {
+    padding: 64px 16px;
+    text-align: center;
+}
+
+.footer__socials-list {
+    font-size: 24px;
+}
+
+.footer__socials-list a {
+    color: rgba(0,0,0,0.6);
+    text-decoration: none;
+}
+
+.footer__copyright a:hover,
+.footer__socials-list a:hover {
+    color: rgba(0,0,0,0.3);
+}
+
+.footer__copyright {
+    margin-top: 15px;
+    color: rgba(0,0,0,0.6);
+}
+
+.footer__copyright a {
+    color: rgba(0,0,0,0.6);
+}
+
