--- a/src/eduverse-frontend/src/components/Auth/ResetPassword.css
+++ b/src/eduverse-frontend/src/components/Auth/ResetPassword.css
@@ -72,3 +72,17 @@ input {
 .reset-password-links a:hover {
   text-decoration: underline; /* Gạch chân khi hover */
 }  
+
+.reset-password-message {
+  color: red;
+  margin-top: 10px;
+  margin-bottom: 20px; /* Thêm khoảng cách phía dưới thông báo lỗi */
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+}
+
+.reset-password-warning-icon {
+  margin-right: 10px;
+  font-size: 1.2rem; /* Điều chỉnh kích thước biểu tượng */
+}
