--- a/src/eduverse-frontend/src/components/Course/MeListCourses.css
+++ b/src/eduverse-frontend/src/components/Course/MeListCourses.css
@@ -5,8 +5,17 @@
 }
 
 h2 {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    justify-content: center;
+    font-size: 20px;
     margin-bottom: 20px;
+}
+
+h2 svg {
+    font-size: 24px;
+    margin-bottom: 0;
 }
 
 .course-list {
@@ -53,22 +62,51 @@ h2 {
 }
 
 .course-actions button {
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem; /* khoảng cách giữa icon và text */
+    padding: 8px 12px; /* khoảng cách bên trong nút */
+    font-size: 14px; /* kích thước chữ */
+    cursor: pointer; /* hiệu ứng con trỏ */
+    background-color: #5a0b55;
     color: #fff;
-    font-weight: bold;
-    background-color: purple;
-    font-size: 12px;
 }
 
-.course-actions button:hover {
-    background-color: #5A2D8A;
+.course-actions button svg {
+    font-size: 1.2rem; /* kích thước icon */
 }
 
 .add-button {
     width: 200px;
     padding-left: 20px;
+}
+
+.course-actions button:hover {
+    background-color: #5A2D8A;
+}
+.btn-course-add {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #5a0b55;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-course-add:hover {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #5a0b55;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
