--- a/src/eduverse-frontend/src/components/Lesson/LessonCreate.css
+++ b/src/eduverse-frontend/src/components/Lesson/LessonCreate.css
@@ -41,7 +41,7 @@
     padding: 3px;
 }
 
-button {
+.btn-lesson-create {
     display: block;
     width: 100%;
     padding: 10px;
@@ -54,6 +54,6 @@ button {
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+.btn-lesson-create:hover {
     background-color: #820e7a;
 }
