--- a/src/eduverse-frontend/src/components/Assignment/AssignmentCreate.css
+++ b/src/eduverse-frontend/src/components/Assignment/AssignmentCreate.css
@@ -1,49 +1,61 @@
 .assignment-create {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 30px auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    font-family: Arial, sans-serif;
     background-color: #fff;
 }
 
-.assignment-create h2 {
+.submit-course-form h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #333;
 }
 
-.assignment-create label {
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
     display: block;
-    margin-bottom: 10px;
     font-weight: bold;
+    margin-bottom: 5px;
+    color: #555;
 }
 
-.assignment-create input[type="text"],
-.assignment-create input[type="date"],
-.assignment-create input[type="number"],
-.assignment-create textarea {
+.form-group input,
+.form-group textarea,
+.form-group select {
     width: 100%;
     padding: 8px;
-    margin-top: 4px;
+    font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
-.assignment-create input[type="file"] {
-    margin-top: 4px;
+.form-group input[type="file"] {
+    padding: 3px;
 }
 
-.assignment-create input[type="submit"] {
+.btn-material_create{
+    display: block;
+    width: 100%;
+    padding: 10px;
     background-color: #5a0b55;
-    color: white;
-    padding: 10px 15px;
+    color: #fff;
     border: none;
     border-radius: 4px;
+    font-size: 18px;
     cursor: pointer;
-    margin-top: 20px;
+    transition: background-color 0.3s ease;
 }
 
-.assignment-create input[type="submit"]:hover {
+.btn-material_create:hover {
     background-color: #820e7a;
 }
+
+
