--- a/src/eduverse-frontend/src/components/Common/Header.css
+++ b/src/eduverse-frontend/src/components/Common/Header.css
@@ -153,3 +153,35 @@
 .header-language-option:hover {
   background-color: #f1f1f1; /* Nền màu xám nhạt khi hover */
 }
+
+
+
+/* avatar và dropdown */
+.header-avatar-container {
+  position: relative;
+  display: inline-block;
+}
+
+.header-avatar-dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  min-width: 150px;
+  text-align: left;
+}
+
+.header-avatar-dropdown-item {
+  padding: 10px 15px;
+  text-decoration: none;
+  display: block;
+  color: black;
+  cursor: pointer;
+}
+
+.header-avatar-dropdown-item:hover {
+  background-color: #f1f1f1;
+}
